[gd_scene load_steps=20 format=3 uid="uid://chhf5tjr2l5py"]

[ext_resource type="Script" path="res://scenes/instrument_menu/instrument_menu.gd" id="1_66tmw"]
[ext_resource type="Texture2D" uid="uid://dxcxogdwflpig" path="res://assets/gui/main/background.png" id="2_hvina"]
[ext_resource type="Shader" path="res://shaders/LightingBackground.gdshader" id="3_f3xdb"]
[ext_resource type="PackedScene" uid="uid://drhti1f6dfqep" path="res://scenes/left_bar/left_bar.tscn" id="4_jve2t"]
[ext_resource type="FontFile" uid="uid://bd4vhm6dvnuue" path="res://fonts/Games.ttf" id="5_bh1g2"]
[ext_resource type="Script" path="res://scenes/instrument_selection/instrument_selection_item.gd" id="5_n81pi"]
[ext_resource type="Texture2D" uid="uid://bcyql8pbvs5yj" path="res://assets/gui/icons/song.png" id="6_rhfwd"]
[ext_resource type="Shader" path="res://scenes/instrument_selection/item_circle.gdshader" id="6_rmx6f"]
[ext_resource type="Texture2D" uid="uid://bludcfr13nglg" path="res://assets/gui/main/mandoline.png" id="7_cgjnb"]
[ext_resource type="Texture2D" uid="uid://cmdd61q57jiu" path="res://assets/gui/icons/course.png" id="7_o5ydg"]
[ext_resource type="PackedScene" uid="uid://bvqgs74gtjvsj" path="res://scenes/instrument_menu/instrument_menu_action.tscn" id="8_88a38"]
[ext_resource type="Texture2D" uid="uid://cxpbdejhyhyxu" path="res://assets/gui/icons/lyrics.png" id="9_mhjhx"]
[ext_resource type="Texture2D" uid="uid://drypojyiolrwq" path="res://assets/gui/icons/settings.png" id="10_oow68"]
[ext_resource type="Texture2D" uid="uid://de686ygqs5poa" path="res://assets/gui/icons/logout.png" id="11_quq3v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y6ivb"]
shader = ExtResource("3_f3xdb")
shader_parameter/indicate = true
shader_parameter/indicating_power = 1.0
shader_parameter/lighting_point = Vector2(0.5, 0.5)
shader_parameter/radius_base = 0.5
shader_parameter/size = null
shader_parameter/static_power = 0.4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utcdj"]
bg_color = Color(0.0862745, 0.0313726, 0.176471, 1)

[sub_resource type="LabelSettings" id="LabelSettings_garyf"]
line_spacing = 0.0
font = ExtResource("5_bh1g2")
font_size = 90

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yxg63"]
shader = ExtResource("6_rmx6f")
shader_parameter/albedo = Color(0.968627, 0, 0.8, 0.458824)
shader_parameter/animate = false
shader_parameter/indicate = false
shader_parameter/indicating_power = 1.0
shader_parameter/lighting_point = Vector2(0.5, 0.5)
shader_parameter/radius = 1.0
shader_parameter/radius_base = 0.5
shader_parameter/size = Vector2(600, 600)
shader_parameter/square_scale = 0.509
shader_parameter/static_power = 0.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcstd"]
bg_color = Color(0.145098, 0.462745, 1, 1)

[node name="InstrumentMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-149, 500)
script = ExtResource("1_66tmw")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hvina")
stretch_mode = 6

[node name="Layer" type="Panel" parent="Background"]
material = SubResource("ShaderMaterial_y6ivb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_utcdj")

[node name="LeftBar" parent="." instance=ExtResource("4_jve2t")]

[node name="Right" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 204.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="Control" parent="Right"]
layout_mode = 3
anchor_right = 0.4
anchor_bottom = 1.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Right/Left"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="Right/Left/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 686.0
offset_bottom = 50.0

[node name="BackBtn" type="Button" parent="Right/Left/VBoxContainer"]
offset_top = 54.0
offset_right = 686.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(0.980392, 0, 1, 1)
theme_override_font_sizes/font_size = 18
text = "< Back"
flat = true
alignment = 0

[node name="InstrumentTitle" type="Label" parent="Right/Left/VBoxContainer"]
offset_top = 89.0
offset_right = 686.0
offset_bottom = 180.0
text = "MANDOLINE"
label_settings = SubResource("LabelSettings_garyf")
vertical_alignment = 1

[node name="Details" type="HBoxContainer" parent="Right/Left/VBoxContainer"]
offset_top = 184.0
offset_right = 686.0
offset_bottom = 208.0
theme_override_constants/separation = 20

[node name="Songs" type="HBoxContainer" parent="Right/Left/VBoxContainer/Details"]
offset_right = 103.0
offset_bottom = 24.0
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="Right/Left/VBoxContainer/Details/Songs"]
custom_minimum_size = Vector2(24, 0)
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("6_rhfwd")
ignore_texture_size = true
stretch_mode = 5

[node name="Number" type="Label" parent="Right/Left/VBoxContainer/Details/Songs"]
offset_left = 34.0
offset_right = 45.0
offset_bottom = 24.0
mouse_filter = 1
text = "0"

[node name="SongsCountLabel" type="Label" parent="Right/Left/VBoxContainer/Details/Songs"]
offset_left = 55.0
offset_right = 103.0
offset_bottom = 24.0
mouse_filter = 1
text = "songs"

[node name="Courses" type="HBoxContainer" parent="Right/Left/VBoxContainer/Details"]
offset_left = 123.0
offset_right = 240.0
offset_bottom = 24.0
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="Right/Left/VBoxContainer/Details/Courses"]
custom_minimum_size = Vector2(24, 0)
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("7_o5ydg")
ignore_texture_size = true
stretch_mode = 5

[node name="Number" type="Label" parent="Right/Left/VBoxContainer/Details/Courses"]
offset_left = 34.0
offset_right = 45.0
offset_bottom = 24.0
mouse_filter = 1
text = "0"

[node name="CoursesCountLabel" type="Label" parent="Right/Left/VBoxContainer/Details/Courses"]
offset_left = 55.0
offset_right = 117.0
offset_bottom = 24.0
mouse_filter = 1
text = "courses"

[node name="Spacer2" type="Control" parent="Right/Left/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchors_preset = 0
offset_top = 212.0
offset_right = 686.0
offset_bottom = 262.0

[node name="Actions" type="VBoxContainer" parent="Right/Left/VBoxContainer"]
offset_top = 266.0
offset_right = 686.0
offset_bottom = 821.0
theme_override_constants/separation = 15

[node name="Learn" parent="Right/Left/VBoxContainer/Actions" instance=ExtResource("8_88a38")]
offset_right = 686.0
offset_bottom = 80.0
metadata/_edit_group_ = true

[node name="Play" parent="Right/Left/VBoxContainer/Actions" instance=ExtResource("8_88a38")]
offset_top = 95.0
offset_right = 686.0
offset_bottom = 175.0
metadata/_edit_group_ = true

[node name="Background" parent="Right/Left/VBoxContainer/Actions/Play" index="0"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Play" index="1"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Play/HBoxContainer" index="0"]
offset_right = 684.0

[node name="Icon" parent="Right/Left/VBoxContainer/Actions/Play/HBoxContainer/HBoxContainer" index="1"]
texture = ExtResource("6_rhfwd")

[node name="Label" parent="Right/Left/VBoxContainer/Actions/Play/HBoxContainer/HBoxContainer" index="3"]
offset_right = 606.0
text = "PLAY A SONG"

[node name="Right" parent="Right/Left/VBoxContainer/Actions/Play/HBoxContainer/HBoxContainer" index="4"]
offset_left = 610.0
offset_right = 675.0

[node name="Spacer3" parent="Right/Left/VBoxContainer/Actions/Play/HBoxContainer/HBoxContainer" index="5"]
offset_left = 679.0
offset_right = 684.0

[node name="BtnOverlay" parent="Right/Left/VBoxContainer/Actions/Play" index="2"]
offset_right = 685.0

[node name="Matches" parent="Right/Left/VBoxContainer/Actions" instance=ExtResource("8_88a38")]
offset_top = 190.0
offset_right = 686.0
offset_bottom = 270.0
metadata/_edit_group_ = true

[node name="Background" parent="Right/Left/VBoxContainer/Actions/Matches" index="0"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Matches" index="1"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Matches/HBoxContainer" index="0"]
offset_right = 684.0

[node name="Icon" parent="Right/Left/VBoxContainer/Actions/Matches/HBoxContainer/HBoxContainer" index="1"]
texture = ExtResource("9_mhjhx")

[node name="Label" parent="Right/Left/VBoxContainer/Actions/Matches/HBoxContainer/HBoxContainer" index="3"]
offset_right = 606.0
text = "MATCHES"

[node name="Right" parent="Right/Left/VBoxContainer/Actions/Matches/HBoxContainer/HBoxContainer" index="4"]
offset_left = 610.0
offset_right = 675.0

[node name="Spacer3" parent="Right/Left/VBoxContainer/Actions/Matches/HBoxContainer/HBoxContainer" index="5"]
offset_left = 679.0
offset_right = 684.0

[node name="BtnOverlay" parent="Right/Left/VBoxContainer/Actions/Matches" index="2"]
offset_right = 685.0

[node name="Tuning" parent="Right/Left/VBoxContainer/Actions" instance=ExtResource("8_88a38")]
offset_top = 285.0
offset_right = 686.0
offset_bottom = 365.0
metadata/_edit_group_ = true

[node name="Background" parent="Right/Left/VBoxContainer/Actions/Tuning" index="0"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Tuning" index="1"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Tuning/HBoxContainer" index="0"]
offset_right = 684.0

[node name="Icon" parent="Right/Left/VBoxContainer/Actions/Tuning/HBoxContainer/HBoxContainer" index="1"]
texture = ExtResource("9_mhjhx")

[node name="Label" parent="Right/Left/VBoxContainer/Actions/Tuning/HBoxContainer/HBoxContainer" index="3"]
offset_right = 606.0
text = "TUNER"

[node name="Right" parent="Right/Left/VBoxContainer/Actions/Tuning/HBoxContainer/HBoxContainer" index="4"]
offset_left = 610.0
offset_right = 675.0

[node name="Spacer3" parent="Right/Left/VBoxContainer/Actions/Tuning/HBoxContainer/HBoxContainer" index="5"]
offset_left = 679.0
offset_right = 684.0

[node name="BtnOverlay" parent="Right/Left/VBoxContainer/Actions/Tuning" index="2"]
offset_right = 685.0

[node name="Settings" parent="Right/Left/VBoxContainer/Actions" instance=ExtResource("8_88a38")]
offset_top = 380.0
offset_right = 686.0
offset_bottom = 460.0
metadata/_edit_group_ = true

[node name="Background" parent="Right/Left/VBoxContainer/Actions/Settings" index="0"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Settings" index="1"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Settings/HBoxContainer" index="0"]
offset_right = 684.0

[node name="Icon" parent="Right/Left/VBoxContainer/Actions/Settings/HBoxContainer/HBoxContainer" index="1"]
texture = ExtResource("10_oow68")

[node name="Label" parent="Right/Left/VBoxContainer/Actions/Settings/HBoxContainer/HBoxContainer" index="3"]
offset_right = 606.0
text = "SETTINGS"

[node name="Right" parent="Right/Left/VBoxContainer/Actions/Settings/HBoxContainer/HBoxContainer" index="4"]
offset_left = 610.0
offset_right = 675.0

[node name="Spacer3" parent="Right/Left/VBoxContainer/Actions/Settings/HBoxContainer/HBoxContainer" index="5"]
offset_left = 679.0
offset_right = 684.0

[node name="BtnOverlay" parent="Right/Left/VBoxContainer/Actions/Settings" index="2"]
offset_right = 685.0

[node name="Quit" parent="Right/Left/VBoxContainer/Actions" instance=ExtResource("8_88a38")]
offset_top = 475.0
offset_right = 686.0
offset_bottom = 555.0
metadata/_edit_group_ = true

[node name="Background" parent="Right/Left/VBoxContainer/Actions/Quit" index="0"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Quit" index="1"]
offset_right = 685.0

[node name="HBoxContainer" parent="Right/Left/VBoxContainer/Actions/Quit/HBoxContainer" index="0"]
offset_right = 684.0

[node name="Icon" parent="Right/Left/VBoxContainer/Actions/Quit/HBoxContainer/HBoxContainer" index="1"]
texture = ExtResource("11_quq3v")

[node name="Label" parent="Right/Left/VBoxContainer/Actions/Quit/HBoxContainer/HBoxContainer" index="3"]
offset_right = 606.0
text = "QUIT"

[node name="Right" parent="Right/Left/VBoxContainer/Actions/Quit/HBoxContainer/HBoxContainer" index="4"]
offset_left = 610.0
offset_right = 675.0

[node name="Spacer3" parent="Right/Left/VBoxContainer/Actions/Quit/HBoxContainer/HBoxContainer" index="5"]
offset_left = 679.0
offset_right = 684.0

[node name="BtnOverlay" parent="Right/Left/VBoxContainer/Actions/Quit" index="2"]
offset_right = 685.0

[node name="Right" type="Control" parent="Right"]
layout_mode = 3
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="InstrumentBox" type="Control" parent="Right/Right"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = -254.5
offset_right = 254.5
offset_bottom = 254.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("5_n81pi")
metadata/_edit_group_ = true

[node name="Circle" type="Control" parent="Right/Right/InstrumentBox"]
material = SubResource("ShaderMaterial_yxg63")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(260, 260)
mouse_filter = 1

[node name="Layer" type="Panel" parent="Right/Right/InstrumentBox/Circle"]
use_parent_material = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_pcstd")

[node name="Image" type="TextureRect" parent="Right/Right/InstrumentBox"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.5
offset_top = -255.5
offset_right = 280.5
offset_bottom = 256.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_cgjnb")

[connection signal="script_changed" from="." to="." method="_on_script_changed"]
[connection signal="pressed" from="Right/Left/VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="selected" from="Right/Left/VBoxContainer/Actions/Learn" to="." method="_on_Learn_selected"]
[connection signal="selected" from="Right/Left/VBoxContainer/Actions/Play" to="." method="_on_Play_selected"]
[connection signal="selected" from="Right/Left/VBoxContainer/Actions/Matches" to="." method="_on_Matches_selected"]
[connection signal="selected" from="Right/Left/VBoxContainer/Actions/Tuning" to="." method="_on_Tuning_selected"]
[connection signal="selected" from="Right/Left/VBoxContainer/Actions/Settings" to="." method="_on_Settings_selected"]
[connection signal="selected" from="Right/Left/VBoxContainer/Actions/Quit" to="." method="_on_Quit_selected"]
[connection signal="mouse_entered" from="Right/Right/InstrumentBox" to="Right/Right/InstrumentBox" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Right/Right/InstrumentBox" to="Right/Right/InstrumentBox" method="_on_mouse_exited"]

[editable path="Right/Left/VBoxContainer/Actions/Play"]
[editable path="Right/Left/VBoxContainer/Actions/Matches"]
[editable path="Right/Left/VBoxContainer/Actions/Tuning"]
[editable path="Right/Left/VBoxContainer/Actions/Settings"]
[editable path="Right/Left/VBoxContainer/Actions/Quit"]
