[gd_scene load_steps=15 format=3 uid="uid://b2ew1c3swawaj"]

[ext_resource type="Script" path="res://scenes/instrument_selection/instrument_selection_item.gd" id="1_g0eae"]
[ext_resource type="Shader" path="res://scenes/instrument_selection/item_circle.gdshader" id="2_tm0hu"]
[ext_resource type="Texture2D" uid="uid://bludcfr13nglg" path="res://assets/gui/main/mandoline.png" id="3_s8f7b"]
[ext_resource type="FontFile" uid="uid://bd4vhm6dvnuue" path="res://fonts/Games.ttf" id="4_e8mw7"]
[ext_resource type="Texture2D" uid="uid://bcyql8pbvs5yj" path="res://assets/gui/icons/song.png" id="5_v7lu5"]
[ext_resource type="Texture2D" uid="uid://cmdd61q57jiu" path="res://assets/gui/icons/course.png" id="6_sdkno"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ue7gu"]
shader = ExtResource("2_tm0hu")
shader_parameter/radius = 1.0
shader_parameter/animate = false
shader_parameter/square_scale = 0.509
shader_parameter/albedo = Color(0.968627, 0, 0.8, 0.458824)
shader_parameter/indicate = false
shader_parameter/size = Vector2(600, 600)
shader_parameter/lighting_point = Vector2(0.5, 0.5)
shader_parameter/indicating_power = 1.0
shader_parameter/radius_base = 0.5
shader_parameter/static_power = 0.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v3wu"]
bg_color = Color(0.145098, 0.462745, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lvjx4"]
font = ExtResource("4_e8mw7")
font_size = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e6w7x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_crpl3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l1vbk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5ujm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vl7xv"]

[node name="InstrumentSelectionItem" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 509.0
offset_bottom = 509.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_g0eae")
metadata/_edit_group_ = true

[node name="Circle" type="Control" parent="."]
material = SubResource("ShaderMaterial_ue7gu")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(260, 260)
mouse_filter = 1

[node name="Layer" type="Panel" parent="Circle"]
use_parent_material = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_8v3wu")

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_s8f7b")
expand_mode = 1
stretch_mode = 4

[node name="Info" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.3
anchor_top = 0.608
anchor_right = 0.3
anchor_bottom = 0.608
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="Info"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "MANDOLINE"
label_settings = SubResource("LabelSettings_lvjx4")

[node name="Songs" type="HBoxContainer" parent="Info"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Icon" type="TextureRect" parent="Info/Songs"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("5_v7lu5")
stretch_mode = 3

[node name="SongsNumber" type="Label" parent="Info/Songs"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "0"

[node name="SongsCountLabel" type="Label" parent="Info/Songs"]
layout_mode = 2
mouse_filter = 1
text = "songs"

[node name="Courses" type="HBoxContainer" parent="Info"]
visible = false
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Info/Courses"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
texture = ExtResource("6_sdkno")
stretch_mode = 3

[node name="CoursesNumber" type="Label" parent="Info/Courses"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "0"

[node name="CoursesCountLabel" type="Label" parent="Info/Courses"]
layout_mode = 2
mouse_filter = 1
text = "courses"

[node name="Overlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="OverlayButton" type="Button" parent="Overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_e6w7x")
theme_override_styles/hover = SubResource("StyleBoxEmpty_crpl3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_l1vbk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_i5ujm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vl7xv")

[connection signal="pressed" from="Overlay/OverlayButton" to="." method="_on_overlay_button_pressed"]
